# NEAR-metadata-chatbot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  app.py  demo_chatbot.py  docker-compose.yml  pyproject.toml  requirements.txt  semantic_rag_chatbot.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.streamlit/: config.toml
chroma_demo_db/3910c2fc-6af3-4c21-9955-b14a850cfb9f/: index_metadata.pickle
chroma_demo_db/3f5e6edf-5368-4027-845e-56d3996df347/: index_metadata.pickle
chroma_demo_db/4a58356e-eec6-4243-a41e-2b1b72c2d21d/: index_metadata.pickle
near_metadata_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: database_utils.py  debug_vectorstore.py  inspect_collection.py  json_parser.py  reorganize_xml.py  test_chunks.py  test_parser.py  test_retriever.py  train_vectorstore.py  view_json_structure.py  xml_parser.py
scripts/evaluation/: aging_semantic_queries.json  compare_embedding_models.py  debug_vectorstore.py  inspect_collection.py  test_chunks.py  test_parser.py  test_retriever.py
scripts/training/: reorganize_xml.py  train_vectorstore.py
styles/: near_brand.css
